name:                 imprint
version:              0.0.1.0
cabal-version:        >= 1.18
tested-with:          GHC==8.2.2
license:              BSD3
license-file:         LICENSE.md
author:               Mark Karpov <markkarpov92@gmail.com>
maintainer:           Mark Karpov <markkarpov92@gmail.com>
homepage:             https://github.com/mrkkrp/imprint
bug-reports:          https://github.com/mrkkrp/imprint/issues
category:             Serialization
synopsis:             Serialization of arbitrary Haskell expressions
build-type:           Simple
description:          Serialization of arbitrary Haskell expressions.
extra-doc-files:      CHANGELOG.md
                    , README.md

source-repository head
  type:               git
  location:           https://github.com/mrkkrp/imprint.git

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

library
  build-depends:      base             >= 4.10 && < 5.0
                    , binary           >= 0.5  && < 0.9
                    , bytestring       >= 0.2  && < 0.11
  exposed-modules:    Data.Imprint
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010
